--- a/css/menu.css
+++ b/css/menu.css
@@ -232,3 +232,9 @@
     width: 75px;
   }
 }
+
+@media only screen and (max-width: 420px) {
+  .menu-wrap .menu a {
+    font-size: 30px;
+  }
+}
