--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Shojumaru&display=swap');
+
 *,
 *:before,
 *:after {
@@ -9,6 +11,7 @@ body {
   background: #000;
   padding: 0;
   font-weight: 700;
+  font-family: 'Shojumaru', cursive;
 }
 
 img {
@@ -27,11 +30,20 @@ img {
 }
 
 .neon {
-  font-family: 'Neon 80s';
   font-size: 112px;
   color: #ffedff;
   padding: 15px;
   filter: url(#stroke) url(#inner-glow) url(#outer-glow) url(#outer-glow1);
+}
+
+@media only screen and (max-width: 1200px) {
+  .neon {
+    font-size: 78px;
+  }
+
+  img {
+    top: 10vh;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -46,7 +58,7 @@ img {
 
 @media only screen and (max-width: 650px) {
   .neon {
-    font-size: 48px;
+    font-size: 32px;
   }
 
   img {
