--- a/css/style_projects.css
+++ b/css/style_projects.css
@@ -23,6 +23,7 @@ body {
   z-index: 999;
   font-size: 48px;
   text-shadow: 4px 4px 3px rgb(0, 0, 0), 4px 4px 3px rgb(255, 136, 0);
+  text-align: center;
 }
 
 img {
@@ -35,6 +36,12 @@ img {
 @media only screen and (max-width: 768px) {
   img {
     top: 12vh;
+  }
+
+  .title {
+    font-size: 24px;
+    top: 12px;
+    line-height: 40px;
   }
 }
 
